--- a/AquaNet/css/foroActualizado.css
+++ b/AquaNet/css/foroActualizado.css
@@ -9,7 +9,9 @@ body {
     background:  #d5e4f5;
     color: #333;
 }
- 
+ .espacio-carrusel {
+    height: 150px;
+}
 .encabezado {
     background-color: white;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
